# Projeto-VSCode-EPOSMoteIII

./: CMakeLists.txt  LICENSE  README.md
app/: main.c  startup_gcc.c
cmake/: arm-none-eabi-toolchain.cmake
include/: meu_codigo.h
source/: meu_codigo.c
tools/: bootloader.c  eposInterrupts.c  eposInterrupts.h  linker.ld  startup_gcc.c
